[project]
name = "roomodes-editor"
version = "0.1.0"
description = "Roo Custom Modes Editor"
authors = [
    {name = "AI Developer", email = "ai@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
    "toml>=0.10.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]